# chisel

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml
chisel/: pipeline.py
chisel/base/: protocols.py
chisel/chunkers/: fixed_length_chunker.py  noop_chunker.py  sliding_window_chunker.py
chisel/exporters/: hf_exporter.py  json_exporter.py
chisel/extraction/: pipeline.py
chisel/labelers/: bilo_labeler.py  binary_labeler.py  bio_labeler.py  simple_bio_labeler.py
chisel/loaders/: json_html_loader.py
chisel/models/: models.py
chisel/parsers/: archived_html_tag_parser.py  conll_parser.py  html_tag_parser.py  json_span_parser.py
chisel/tokenizers/: hf_tokenizer.py  simple_tokenizer.py  spacy_tokenizer.py
chisel/validators/: __init__.py  bilou_alignement_validator.py  bio_alignment_validator.py  bio_validator.py  span_in_text_validator.py  span_text_match_validator.py
components/aligners/: index.html
components/chunkers/: index.html
components/exporters/: index.html
components/formatters/: index.html
components/labelers/: index.html
components/models/: index.html
components/parsers/: index.html
components/tokenizers/: index.html
components/validators/: index.html
docs/: getting-started.md  index.md
examples/: basic_pipeline_example.py  conll.ipynb  html.ipynb  html_tags.ipynb  json.ipynb  json_parser.ipynb
search/: search_index.json
tests/: test_parsers.py
(+78 files in other folders)
